Edit Product Version 1.2
Editar Metodo editar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="hint_lista_precios">Producción de las plantas petroleras </string>
 
 
+    <string name="ic_contacto">Producción de las plantas petroleras </string>
+
+
 </resources>
